move index.html file into the html folder and correct all associated file paths

--- a/html/article1.html
+++ b/html/article1.html
@@ -43,7 +43,7 @@
             <nav>
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="../index.html" class="nav-link">
+                        <a href="./index.html" class="nav-link">
                             <div>home</div>
                         </a>
                     </li>
