--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Hristiyan Dodov: Full-Stack Developer at Oblik Studio</title>
-        <link rel="stylesheet" href="./styles.css" />
+        <link rel="stylesheet" href="../css/styles.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -16,7 +16,7 @@
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="./images/favicon-dark-plus.png"
+            href="../images/favicon-monokai.png"
             id="favicon"
         />
     </head>
@@ -31,12 +31,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="./html/blog.html" class="nav-link">
+                            <a href="./blog.html" class="nav-link">
                                 <div>blog</div>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="./html/project.html" class="nav-link">
+                            <a href="./project.html" class="nav-link">
                                 <div>projects</div>
                             </a>
                         </li>
@@ -49,7 +49,7 @@
                         <header>
                             <div class="header">
                                 <img
-                                    src="./images/dodov-profile-pic.jpg"
+                                    src="../images/dodov-profile-pic.jpg"
                                     alt="Hristiyan Dodov"
                                     class="profile-pic"
                                 />
@@ -84,16 +84,16 @@
                         <section class="articles">
                             <h2 class="section-header">Latest Articles</h2>
                             <article>
-                                <a href="./html/article1.html">
+                                <a href="./article1.html">
                                     <img
-                                        src="./images/number-of-ones.png"
+                                        src="../images/number-of-ones.png"
                                         alt="Number 1 to 38 with all 1s highlighted"
                                         class="article-img"
                                     />
                                 </a>
                                 <div class="article-text">
                                     <h3 class="article-title">
-                                        <a href="./html/article1.html"
+                                        <a href="./article1.html"
                                             >Number of Ones</a
                                         >
                                     </h3>
@@ -110,16 +110,16 @@
                                 </div>
                             </article>
                             <article>
-                                <a href="./html/article-2.html">
+                                <a href="./article-2.html">
                                     <img
-                                        src="./images/rm-rf-git.png"
+                                        src="../images/rm-rf-git.png"
                                         alt="Random characters with the command rm -rf .git highlighted in the middle"
                                         class="article-img"
                                     />
                                 </a>
                                 <div class="article-text">
                                     <h3 class="article-title">
-                                        <a href="./html/article-2.html">
+                                        <a href="./article-2.html">
                                             Don't Build Your Own Framework
                                         </a>
                                     </h3>
@@ -136,16 +136,16 @@
                                 </div>
                             </article>
                             <article>
-                                <a href="./html/article_3.html">
+                                <a href="./article_3.html">
                                     <img
-                                        src="./images/browser-edge-cache.png"
+                                        src="../images/browser-edge-cache.png"
                                         alt="Random characters with browser, random and edge highlighted in the middle"
                                         class="article-img"
                                     />
                                 </a>
                                 <div class="article-text">
                                     <h3 class="article-title">
-                                        <a href="./html/article_3.html"
+                                        <a href="./article_3.html"
                                             >Browser Cache and Edge
                                             Cache&nbsp;Explained</a
                                         >
@@ -162,7 +162,7 @@
                                     </p>
                                 </div>
                             </article>
-                            <a href="./html/blog.html" class="more-articles">
+                            <a href="./blog.html" class="more-articles">
                                 Read More
                                 <span class="arrow">→</span>
                             </a>
@@ -172,9 +172,9 @@
                             <h2 class="section-header">Projects</h2>
                             <article>
                                 <div class="flex-mobile-title">
-                                    <a href="./html/nexo.html">
+                                    <a href="./nexo.html">
                                         <img
-                                            src="./images/nexo-logo.svg"
+                                            src="../images/nexo-logo.svg"
                                             alt="Nexo crypto bank logo"
                                             class="project-img"
                                         />
@@ -183,7 +183,7 @@
                                         <h3
                                             class="article-title project-title-mobile"
                                         >
-                                            <a href="./html/nexo.html">Nexo</a>
+                                            <a href="./nexo.html">Nexo</a>
                                         </h3>
                                         <a
                                             href="https://nexo.io/"
@@ -195,7 +195,7 @@
                                 </div>
                                 <div class="article-text">
                                     <h3 class="article-title project-title">
-                                        <a href="./html/nexo.html">Nexo</a>
+                                        <a href="./nexo.html">Nexo</a>
                                     </h3>
                                     <p class="article-description">
                                         Developing and maintaining the product
@@ -212,9 +212,9 @@
                             </article>
                             <article>
                                 <div class="flex-mobile-title">
-                                    <a href="./html/rundown.html">
+                                    <a href="./rundown.html">
                                         <img
-                                            src="./images/rundown-logo.svg"
+                                            src="../images/rundown-logo.svg"
                                             alt="Rundown chrome extension logo"
                                             class="project-img"
                                         />
@@ -223,9 +223,7 @@
                                         <h3
                                             class="article-title project-title-mobile"
                                         >
-                                            <a href="./html/rundown.html"
-                                                >Rundown</a
-                                            >
+                                            <a href="./rundown.html">Rundown</a>
                                         </h3>
                                         <a
                                             href="https://chrome.google.com/webstore/detail/rundown/opjjddkgmphhkjlgocopmeolmmibiphb"
@@ -237,9 +235,7 @@
                                 </div>
                                 <div class="article-text">
                                     <h3 class="article-title project-title">
-                                        <a href="./html/rundown.html"
-                                            >Rundown</a
-                                        >
+                                        <a href="./rundown.html">Rundown</a>
                                     </h3>
                                     <p class="article-description">
                                         Turns your browser's new-tab page into a
@@ -254,7 +250,7 @@
                                     </p>
                                 </div>
                             </article>
-                            <a href="./html/project.html" class="more-articles">
+                            <a href="./project.html" class="more-articles">
                                 View More
                                 <span class="arrow">→</span>
                             </a>
@@ -316,7 +312,11 @@
                                         >
                                             Light+
                                         </option>
-                                        <option value="monokai" id="monokai">
+                                        <option
+                                            value="monokai"
+                                            id="monokai"
+                                            selected
+                                        >
                                             Monokai
                                         </option>
                                         <option
@@ -345,6 +345,6 @@
                 </div>
             </main>
         </div>
-        <script src="index.js"></script>
+        <script src="../index.js"></script>
     </body>
 </html>
