--- a/html/blog.html
+++ b/html/blog.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog &bull; Hristiyan Dodov</title>
-    <link rel="stylesheet" href="../css/blog-article1.css">
+    <link rel="stylesheet" href="../css/blog.css">
     <link
             rel="icon"
             type="image/png"
