add line number function to home and blog pages

--- a/html/blog.html
+++ b/html/blog.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&display=swap" rel="stylesheet"> 
 
 </head>
-<body>
+<body onload="countLines()">
     <div class="container">
         <div class="content">
             
@@ -44,7 +44,8 @@
 
             <div class="main-content">
             <main class="editor">
-                <header class="blog-header">
+                <div class="editor-content" id="editor-content" style="line-height: 24px">
+                    <header class="blog-header">
                     <h1>Blog</h1>
                     <p>A place for my developer insights and life experiences.</p>
                 </header>
@@ -146,11 +147,34 @@
                         </span>
                     </div>
                 </footer>
+                <div class="lines" id="lines"></div>
+                </div>
             </main>
         </div>
         
         </div>
     </div>
     <script src="../index.js"></script>
+    <script>
+        function countLines() {
+                var el = document.getElementById("editor-content");
+                var editorHeight = el.offsetHeight + 24;
+                console.log(editorHeight)
+                var lineHeight = parseInt(el.style.lineHeight);
+                var lines = parseInt(editorHeight / lineHeight);
+                let lineNumber = 0;
+                let i = 1;
+                while (i < lines) {
+                    let newDiv = document.createElement("div");
+                    newDiv.setAttribute("class", "lines-1");
+                    let divIncrement = document
+                        .getElementById("lines")
+                        .appendChild(newDiv);
+                    divIncrement.innerHTML = i;
+                    divIncrement.style.left = 0;
+                    i++;
+                }
+            }
+    </script>
 </body>
 </html>
