--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="refresh" content="300" />
         <title>Hristiyan Dodov: Full-Stack Developer at Oblik Studio</title>
         <link rel="stylesheet" href="../css/styles.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
