add line numbers to the second article

--- a/html/article-2.html
+++ b/html/article-2.html
@@ -20,7 +20,7 @@
             rel="stylesheet"
         />
     </head>
-    <body>
+    <body onload="countLines()">
         <div class="container">
             <header>
                 <nav>
@@ -64,7 +64,11 @@
             </header>
             <main>
                 <div class="editor">
-                    <div class="editor-content">
+                    <div
+                        class="editor-content"
+                        id="editor-content"
+                        style="line-height: 24px"
+                    >
                         <header class="main-header">
                             <div class="title">
                                 <h1>Don't Build Your Own Framework</h1>
@@ -74,8 +78,8 @@
                                 </p>
                             </div>
                             <div class="publish-date">
-                                <p>19 Jun 2022</p>
-                                <p>197 lines</p>
+                                <p class="actual-date">19 Jun 2022</p>
+                                <p id="line-number">197 lines</p>
                             </div>
                         </header>
                         <img
@@ -443,8 +447,51 @@
                         </footer>
                     </div>
                 </div>
+                <div class="lines" id="lines"></div>
             </main>
         </div>
         <script src="../index.js"></script>
+        <script>
+            function scrollToPosition(height) {
+                console.log(height);
+                window.scrollTo({
+                    top: height,
+                    left: 0,
+                    behavior: "smooth",
+                });
+            }
+
+            function handleScroll(e) {
+                e.preventDefault();
+                var j = Number(e.target.textContent);
+                var k = j * 24 + 135;
+                var d = 8 * 24;
+                scrollToPosition(k - d);
+            }
+
+            function countLines() {
+                document.getElementById("lines").innerHTML = "";
+                var el = document.getElementById("editor-content");
+                var editorHeight = el.offsetHeight + 48;
+                var lineHeight = parseInt(el.style.lineHeight);
+                var lines = parseInt(editorHeight / lineHeight);
+                let lineNumber = 0;
+                document.getElementById("line-number").innerHTML =
+                    lines + " lines";
+                let i = 1;
+                while (i < lines) {
+                    let newDiv = document.createElement("div");
+                    newDiv.setAttribute("class", "lines-1");
+                    newDiv.addEventListener("click", handleScroll);
+                    let divIncrement = document
+                        .getElementById("lines")
+                        .appendChild(newDiv);
+                    divIncrement.innerHTML = i;
+                    divIncrement.style.left = 0;
+                    i++;
+                }
+            }
+            window.addEventListener("resize", countLines);
+        </script>
     </body>
 </html>
