modify the new article and add sever calculator page

--- a/html/blog.html
+++ b/html/blog.html
@@ -48,12 +48,12 @@
                 </header>
 
                  <article class="article">
-                    <a class="calender" href="./article1.html">
+                    <a class="calender" href="./new-article.html">
                         <img src="../images/php-errors-cover-342x.png" alt="">
                     </a>
                     <div class="article-div">
                         <h3>
-                            <a href="article1.html">Debugging PHP 502 and 504 Errors </a>
+                            <a href="./new-article.html">Debugging PHP 502 and 504 Errors </a>
                         </h3>
                         <p class="time">Not all issues come with a wall of red text.</p>
                         <p>
