update the home page with the new article

--- a/html/index.html
+++ b/html/index.html
@@ -89,6 +89,33 @@
                         <section class="articles">
                             <h2 class="section-header">Latest Articles</h2>
                             <article>
+                                <a href="./article_3.html">
+                                    <img
+                                        src="../images/php-errors-cover-342x.png"
+                                        alt="Random characters with the equation 'req/res = 504' highlighted in the middle"
+                                        class="article-img"
+                                    />
+                                </a>
+                                <div class="article-text">
+                                    <h3 class="article-title">
+                                        <a href="./article_3.html"
+                                            >Debugging PHP 502 and
+                                            504&nbsp;Errors</a
+                                        >
+                                    </h3>
+                                    <p class="article-description">
+                                        Not all issues come with a wall of red
+                                        text.
+                                    </p>
+                                    <p class="date-published">
+                                        <span class="sr-only"
+                                            >Published on</span
+                                        >
+                                        07 Sep 2022
+                                    </p>
+                                </div>
+                            </article>
+                            <article>
                                 <a href="./article1.html">
                                     <img
                                         src="../images/number-of-ones.png"
@@ -137,33 +164,6 @@
                                             >Published on</span
                                         >
                                         19 Jun 2022
-                                    </p>
-                                </div>
-                            </article>
-                            <article>
-                                <a href="./article_3.html">
-                                    <img
-                                        src="../images/browser-edge-cache.png"
-                                        alt="Random characters with browser, random and edge highlighted in the middle"
-                                        class="article-img"
-                                    />
-                                </a>
-                                <div class="article-text">
-                                    <h3 class="article-title">
-                                        <a href="./article_3.html"
-                                            >Browser Cache and Edge
-                                            Cache&nbsp;Explained</a
-                                        >
-                                    </h3>
-                                    <p class="article-description">
-                                        You updated it? Well, yes, but
-                                        not&nbsp;really.
-                                    </p>
-                                    <p class="date-published">
-                                        <span class="sr-only"
-                                            >Published on</span
-                                        >
-                                        08 Feb 2022
                                     </p>
                                 </div>
                             </article>
