--- a/html/article_3.html
+++ b/html/article_3.html
@@ -68,7 +68,7 @@
                     id="editor-content"
                     style="line-height: 24px"
                 >
-                    <div class="editor">
+                    <div class="editor first-editor">
                         <div id="heading">
                             <div>
                                 <h1>Browser Cache and Edge Cache Explained</h1>
@@ -227,7 +227,7 @@
                             </figure>
                         </div>
                         <div class="text-4">
-                            <h2>What is Edge Caching?</h2>
+                            <h2 class="edge">What is Edge Caching?</h2>
                             <p class="text-2">
                                 While browser caching helps with many requests
                                 by the same user, it doesn't solve the issue of
@@ -515,14 +515,14 @@
             function countLines() {
                 document.getElementById("lines").innerHTML = "";
                 var el = document.getElementById("editor-content");
-                var editorHeight = el.offsetHeight - 24;
+                var editorHeight = el.offsetHeight - 48;
                 var lineHeight = parseInt(el.style.lineHeight);
                 var lines = parseInt(editorHeight / lineHeight);
                 let lineNumber = 0;
                 document.getElementById("line-number").innerHTML =
                     lines + " lines";
                 let i = 1;
-                while (i < lines) {
+                while (i <= lines) {
                     let newDiv = document.createElement("div");
                     newDiv.setAttribute("class", "lines-1");
                     newDiv.addEventListener("click", handleScroll);
