--- a/html/index.html
+++ b/html/index.html
@@ -374,12 +374,12 @@
             function countLines() {
                 document.getElementById("lines").innerHTML = "";
                 var el = document.getElementById("editor-content");
-                var editorHeight = el.offsetHeight + 48;
+                var editorHeight = el.offsetHeight + 24;
                 var lineHeight = parseInt(el.style.lineHeight);
                 var lines = parseInt(editorHeight / lineHeight);
                 let lineNumber = 0;
                 let i = 1;
-                while (i < lines) {
+                while (i <= lines) {
                     let newDiv = document.createElement("div");
                     newDiv.setAttribute("class", "lines-1");
                     newDiv.addEventListener("click", handleScroll);
