Revert "Merge branch 'main' of https://github.com/ChinatuL/dodo.dev-clone-project"
This reverts commit 452eaf0bb9477a84790efdf96398b4a3a7e0033a, reversing
changes made to 29d01bbcdeaff3de582cadf5b05d0c52cce9674a.

--- a/html/article1.html
+++ b/html/article1.html
@@ -102,7 +102,7 @@
                         <p class="paragraph">The task is simple:</p>
                         <div class="text-1-content">
                             <div class="text-3-content">
-                                <p class="paragraph-no-padding">
+                                <p>
                                     Given an integer n, count the total number of 1 digits appearing in
                                      all non-negative integers less than or equal to n.
                                 </p>
@@ -343,7 +343,7 @@
                         </p>
     <pre class="codes scroll-bar">
         <code>
-        <span class="keyword">function</span><span class="code-function"> numberOfOnes</span><span class="code-punctuation">(n) {</span>
+        <span class="keyword">function</span><span class="code-function">numberOfOnes</span><span class="code-punctuation">(n) {</span>
         <span class="keyword">return</span> <span class="code-punctuation">n</span>
                 <span class="code-punctuation">.</span><span class="code-function">toString</span><span class="code-punctuation">()</span>
                 <span class="code-punctuation">.</span><span class="code-function">split</span><span class="code-punctuation">(</span><span class="string">""</span><span class="code-punctuation">)</span>
@@ -380,7 +380,7 @@
                         <p class="paragraph">
                             Play around with the code <a class="green-link" href="https://codepen.io/dodov/pen/poLLNwy?editors=0012" target="_blank">on CodePen!</a>
                         </p>
-                        <p class="last-paragraph">
+                        <p class="paragraph">
                             Also, make sure to subscribe to <a class="green-link" href="https://cassidoo.co/newsletter/" target="_blank">rendezvous with cassidoo</a>
                             for similar puzzles and useful web
                             development content.
